--- a/研究方針.md
+++ b/研究方針.md
@@ -6,21 +6,46 @@
 ## 研究の動機
 無駄な議論をしないようにしたい
 
-## 提案手法
-**LLMで議論の流れを見える化して、評価・改善につなげるシステム**
+## 提案手法の全体像と主要な仮説群
+LLMで議論の流れを見える化して、評価・改善につなげるシステムを構築する。その実現のため、以下の主要な機能を、それぞれ検証すべき「仮説」として位置づけ、段階的に研究を進める。
 
-### 主な機能
+### 仮説1：論理構造の可視化
+*   **仮説**：LLMは、議論テキストから主張、根拠、およびそれらの論理的なつながりを抽出し、人間が理解しやすい形で可視化できる。
+*   **関連機能**：
+    *   主張と根拠の自動抽出
 
-#### 1. 議論の流れの可視化
-- LLMで主張と根拠を自動抽出
-- 論理のつながり（主張同士の関係、論点の展開）をリアルタイム表示
-- 話題によって色分けして議論の脱線を視覚的に分ける
-- 話題をベクトルにして脇道に逸れた時にわかるようにする
+### 仮説2：議論の脱線の検知
+*   **仮説**：各発言をベクトル化して話題の変遷を追跡することで、議論の脱線を自動的に検知し、視覚的に警告できる。
+*   **関連機能**：
+    *   話題によって色分けして議論の脱線を視覚的に分ける
+    *   話題をベクトルにして脇道に逸れた時にわかるようにする
 
-#### 2. 議論の評価とフィードバック
-- 議論の質を測定（論理性、多様な視点、偏りの有無等）
-- 改善点の発見とフィードバック
-- マルチエージェントシステムによる客観的評価
+---
+
+## プレ研究のスコープ：仮説1の検証
+本プレ研究では、上記の中から最も基礎的となる**「仮説1：論理構造の可視化」**に焦点を当てる。具体的には、LLMが主張・根拠・対立関係をどの程度正確に抽出・分析できるかを検証する。
+
+### 仮説1の検証計画
+*   **Step 1: 分析データの準備**
+    *   Web上の議論記事や公開議事録などを2〜3種類準備する。
+*   **Step 2: LLMへの指示（プロンプト）の設計**
+    *   LLMに主張・根拠・対立関係を抽出させるためのプロンプトを設計・実行する。
+*   **Step 3: 結果の評価**
+    *   人間による正解データとLLMの出力を比較し、網羅性・正確性・要約の質の観点で評価する。
+
+### 仮説2の検証計画
+*   **Step 1: 技術選定とデータ準備**
+    *   **技術選定:** 発言をベクトル化するための埋め込みモデル（例: `Sentence-BERT`など、文脈を考慮できるモデル）を選定する。
+    *   **データ準備:** 議論の主題が途中で明確に変化する（脱線する）サンプルテキストを複数準備する。
+*   **Step 2: 脱線検知アルゴリズムの実装**
+    *   テキストを発言単位に分割し、選定したモデルで各発言をベクトル化する。
+    *   発言間のベクトル類似度（コサイン類似度など）を計算し、類似度が急激に変化する箇所を「脱線」の候補として検出するアルゴリズム（例: 直近の発言群の平均ベクトルとの距離を閾値判定）を実装する。
+*   **Step 3: 結果の評価**
+    *   準備したデータに対し、人間が「どこからどこまでが脱線か」という正解ラベルを付与する。
+    *   実装したアルゴリズムの検出結果と正解ラベルを比較し、脱線検知の精度（再現率、適合率など）を定量的に評価する。
+    *   検出結果に基づいて発言を色分けするなどの可視化を行い、その分かりやすさを定性的に評価する。
+
+---
 
 ## 期待される効果
 
@@ -30,7 +55,6 @@
 
 ### 議論の質の向上
 - 論理的な議論の組み立てをサポート
-- 評価とフィードバックによる継続的改善
 
 ### 合意形成の促進
 - 議論全体の可視化による建設的な対話
